# snake

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  game.c
include/: entity.h  input.h  settings.h  snake.h  tail.h  ui.h
src/: entity.c  game.c  input.c  snake.c  tail.c  ui.c
